--- a/README
+++ b/README
@@ -1,1 +1,43 @@
 Furkan ThecLifeN
+
+👋 Hi there! I'm Furkan — a Passionate Full Stack Developer
+🚀 I'm a self-driven full stack developer with experience in building and deploying scalable web applications from scratch. With 10+ completed projects, I’ve worked across the entire development stack — from backend logic to pixel-perfect frontend design.
+
+🛠️ Tech Stack
+Frontend: HTML, CSS, JavaScript, React, Bootstrap, Tailwind
+
+Backend: Node.js, Express, PHP
+
+Databases: MySQL, MongoDB
+
+Tools & DevOps: Git, GitHub, Postman, VS Code, Netlify, Vercel
+
+Other: RESTful APIs, Responsive Design, Authentication Systems
+
+💼 What I Do
+Build responsive and dynamic websites & web apps
+
+Design clean and maintainable code
+
+Integrate third-party APIs
+
+Develop full-stack CRUD applications
+
+Optimize performance and accessibility
+
+Collaborate using Git-based workflows
+
+📈 Projects
+I've successfully completed 10+ full stack projects, ranging from e-commerce sites to custom dashboards, blog platforms, and real-time apps. Check out my pinned repositories to explore my work.
+
+🌱 Currently Working On
+Enhancing my skills in TypeScript and Next.js
+
+Building modern web apps with a focus on performance and user experience
+
+🤝 Let's Connect
+I'm open to freelance opportunities, collaborations, or full-time roles. Feel free to check out my projects or get in touch!
+
+🔗 Portfolio: https://my-portfolio-umber-nine-57.vercel.app/
+📧 Email: f.karaderili2006@gmail.com
+💼 LinkedIn: https://www.linkedin.com/in/furkan-karaderili-369245216/
